added get in touch

--- a/index.html
+++ b/index.html
@@ -114,7 +114,28 @@
                 </p>
             </div>
         </div>
+        <section class="get-in-touch">
+            <div class="get-message">
+                <h1>Get in touch</h1>
+                <p>Got a proposal or want to say hello? Send a mail. I'll respond as fast as I can.</p>
+                <a class="getin" href="mailto:alikoamos7@gmail.com"><i class="fa-sharp fa-solid fa-paper-plane fa-beat fa-5x"></i></a>
+                <a class="send-message" href="mailto:alikoamos7@gmail.com">Send Message</a>
+            </div>
+            <div class="get-socials">
+                <ul>
+                    <li class="links"><i class="fa-brands fa-github fa-2x" style="color: #1fe0c0;"></i></li>
+                    <li class="links"><i class="fa-brands fa-twitter fa-2x" style="color: #34dfcb;"></i></li>
+                    <li class="links"><i class="fa-brands fa-linkedin fa-2x" style="color: #3fdcde;"></i></li>
+                    <li class="links"><i class="fa-solid fa-code fa-2x" style="color: #48e7ea;"></i></li>
+                </ul>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p>code by @aliko amos
+            <br>2022
+        </p>
+    </footer>
 
 
 
