--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     responsive websites with clean, efficient, and elegant code 
                 </p>
                 <div class="header-links">
-                    <a class="resume" href="#">Resume</a>
+                    <a class="resume" href="#contact">Get in touch</a>
                     <a class="myworks" href="#projects">My Works</a>
                 </div>
                 
