--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech plug</title>
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
+    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -70,11 +72,7 @@
             <section class="about-me">
                 <h1>About</h1>
                 <p>Hi! I'm Aliko Amos from Upper East Region of Ghana. I'm a student and also a front-end developer. I love creating things and seeing them online.
-                    <br>
-                    <br>
                     While exploring various online professions, I came across web development. And instantly, I've grown a passion for it. Being curious-minded and a problem solver helped me learn and build many things.
-                    <br>
-                    <br>
                     Interested in working with positive people to create something special.<a href="" class="about-p-link">Let's build something great</a>
                 </p>
             </section>
