--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             
             <div class="cards">
                 
-                <a href="https://aliko2020.github.io/3-column-preview-card-component/"><img src="projecct.4.png" alt="projec img 1"></a>
+                <a href="https://aliko2020.github.io/3-column-preview-card-component/"><img src="project-4.png" alt="projec img 1"></a>
                 <p class="description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, delectus suscipit
                      harum minus explicabo saepe ad iure distinctio eveniet 
