--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body id="home">
-    <header >
+    <header class="nav-header">
         <div class="logo"><img src="logo.png" alt="log0 image"></div>
         <div class="hamburger">
             <div class="line"></div>
@@ -98,7 +98,9 @@
             <div class="cards">
                 
                 <img src="project-4.png" alt="projec img 1">
-                <button class="visitsite"><a href="https://aliko2020.github.io/3-column-preview-card-component/">Visit Site</a></a></button>
+                <div role="button" class="visitsite">
+                    <a href="https://aliko2020.github.io/3-column-preview-card-component/">Visit Site</a>
+                </div>
                 <p class="description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, delectus suscipit
                      harum minus explicabo saepe ad iure distinctio eveniet 
@@ -108,7 +110,9 @@
             <div class="cards">
                 
                 <img src="project-2.png" alt="project img 2">
-                <button class="visitsite"><a href="">Visit Site</a></a></button>
+                <div role="button" class="visitsite">
+                    <a href="https://aliko2020.github.io/3-column-preview-card-component/">Visit Site</a>
+                </div>
                 <p class="description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, delectus suscipit
                      harum minus explicabo saepe ad iure distinctio eveniet 
@@ -117,7 +121,9 @@
             </div>
             <div class="cards">
                 <img src="project-1.png" alt="project img 3">
-                <button class="visitsite"><a href="https://aliko2020.github.io/intro-component-with-signup-form-master/">Visit Site</a></a></button>
+                <div role="button" class="visitsite">
+                    <a href="https://aliko2020.github.io/intro-component-with-signup-form-master/">Visit Site</a>
+                </div>
                 <p class="description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, delectus suscipit
                      harum minus explicabo saepe ad iure distinctio eveniet 
