--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech plug</title>
-    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon2-16x16.png" type="image/x-icon">
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
 </head>
 <body id="home">
     <header class="nav-header">
-        <div class="logo"><img src="logo.png" alt="log0 image"></div>
+        <div class="logo"><img src="logo.svg" alt="log0 image"></div>
         <div class="hamburger">
             <div class="line"></div>
             <div class="line"></div>
@@ -70,11 +70,16 @@
         <!-- about section starts here  -->
         <div class="about" id="about">
             <section class="about-me">
-                <h1>About</h1>
+                <h1 class="about">About Me</h1>
                 <p>Hi! I'm Aliko Amos from Upper East Region of Ghana. I'm a student and also a front-end developer. I love creating things and seeing them online.
                     While exploring various online professions, I came across web development. And instantly, I've grown a passion for it. Being curious-minded and a problem solver helped me learn and build many things.
                     Interested in working with positive people to create something special.<a href="" class="about-p-link">Let's build something great</a>
                 </p>
+                <div class="read-more">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam aperiam soluta quo quisquam, nemo a itaque nulla voluptatibus optio 
+                        sit minima maiores id perferendis deleniti nesciunt aut veritatis sapiente?</p>
+                </div>
+                <button class="read">Read More</button>
             </section>
             <section class="myskills">
                 <h1>Things I've learnt</h1>
@@ -132,16 +137,6 @@
             </div>
         </div>
         <section class="get-in-touch" id="contact">
-            <!-- <div class="get-message">
-                <div class="one">
-                    <h1>Get in touch</h1>
-                    <p>Got a proposal or want to say hello? Send a mail. I'll respond as fast as I can.</p>
-                    <a class="getin" href="mailto:alikoamos7@gmail.com"><i class="fa-sharp fa-solid fa-paper-plane fa-beat fa-5x"></i></a>
-                </div>
-                <div class="two">
-                    <a href="mailto:alikoamos7@gmail.com">Send Message</a>
-                </div>
-            </div> -->
             <div class="message">
                 
                 <form class="">
@@ -154,21 +149,17 @@
 
                 </form>
             </div>
-            <div class="get-socials">
+            <!-- <div class="get-socials">
                 <ul>
                     <li class="links"><a href="https://github.com/Aliko2020"><i class="fa-brands fa-github fa-2x" style="color: #1fe0c0;"></i></a></li>
                     <li class="links"><a href="https://twitter.com/BlackPr87912948"><i class="fa-brands fa-twitter fa-2x" style="color: #acffd4;"></i></a></li>
                     <li class="links"><a href="https://www.linkedin.com/in/aliko-amos-0a7098246/"><i class="fa-brands fa-linkedin fa-2x" style="color: #acffd4;"></i></a></li>
                     <li class="links"><i class="fa-solid fa-code fa-2x" style="color: #48e7ea;"></i></li>
                 </ul>
-            </div>
+            </div> -->
         </section>
     </main>
-    <!-- <footer >
-        <p>code by @aliko amos
-            <br>2022
-        </p>
-    </footer> -->
+   
 
 
 
