--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
                 <p>Hi! I'm Aliko Amos from Upper East Region of Ghana. I'm a student and also a front-end developer. I love creating things and seeing them online.
                     While exploring various online professions, I came across web development. And instantly, I've grown a passion for it. Being curious-minded and a problem solver helped me learn and build many things.
                     Interested in working with positive people to create something special.<a href="" class="about-p-link">Let's build something great</a>
-                </p>
-                <div class="read-more">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero totam aperiam soluta quo quisquam, nemo a itaque nulla voluptatibus optio 
-                        sit minima maiores id perferendis deleniti nesciunt aut veritatis sapiente?</p>
+                </p><div class="more-about-me">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur reiciendis delectus qui aliquid cum exercitationem quasi culpa illo quos deleniti mollitia saepe, eum laudantium nisi.
+                         Tenetur voluptatibus dolorum fuga quos?
+                    </p>
                 </div>
+
                 <button class="read">Read More</button>
+                
             </section>
             <section class="myskills">
                 <h1>Things I've learnt</h1>
